fixed project layout on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,13 +116,18 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 40px 0 40px 0;
+    text-align: center;
+    margin: 40px 10px 20px 10px;
     color: var(--gray1);
     font-family: 'Open Sans', sans-serif;
 }
 
 .lower {
     transform: translateY(100px);
+}
+
+.project-card:hover {
+    transform: translateY(-5px);
 }
 
 .project-card:hover img {
@@ -151,7 +156,7 @@ body {
     opacity: 0;
     position: absolute;
     transition: 0.3s ease;
-    width: 450px;
+    width: 90%;
     transform: translateY(70px);
 }
 .project-card h3 {
